# ToDoTest

./: CMakeLists.txt
include/: auth.h  database.h  loginform.h  registrationform.h  task.h  tasklist.h  taskmanagerform.h
src/: database.cpp  main.cpp
src/auth/: auth.cpp
src/task/: task.cpp
src/tasklist/: tasklist.cpp
src/ui/: loginform.cpp  registrationform.cpp  taskmanagerform.cpp
